refactor(project): gestion des projets
Adaptation de l'entité projet et son service à la migration vers les status de tâches personnalisables